--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,13 @@
+header, main, footer {
+		 padding-left: 300px;
+	 }
+
+	 @media only screen and (max-width : 992px) {
+		 header, main, footer {
+			 padding-left: 0;
+		 }
+	 }
+
 h1 {
 	color: #4FA584;
 	font-size: 42px;
