--- a/public/style.css
+++ b/public/style.css
@@ -36,17 +36,9 @@ footer {
 
 /* CAROUSEL BOUTON SOCIAL FIN /////////////////////////////////////////////////////////////////// */
 /* CAROUSEL REALISATION DEBUT /////////////////////////////////////////////////////////////////// */
-.carousel1 .carousel-item img {
-    width: 40em;
-}
-.carousel1 .carousel-item {
-    display: none;
-    width: 100px;
-    height: 100px;
+.slider{
+	width: 580px;
 
-}
-.carousel1 {
-	height: 700px;
 }
 /* CAROUSEL REALISATION FIN /////////////////////////////////////////////////////////////////// */
 /* NAVBAR DEBUT ///////////////////////////////////////////////////////////////////////////////// */
